# unicode-linebreak

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
gen-tables/: Cargo.toml
gen-tables/src/: main.rs
src/: lib.rs
tests/: test_default.rs
