[package]
name = "unicode-linebreak"
version = "0.0.1"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
description = "Find the Line Break property of codepoints."
homepage = "https://github.com/axelf4/unicode-linebreak"
repository = "https://github.com/axelf4/unicode-linebreak"
readme = "README.md"
keywords = ["unicode"]
license = "Apache-2.0"
edition = "2018"

[build-dependencies]
regex = "1.1.0"
